--- a/composer.json
+++ b/composer.json
@@ -8,18 +8,23 @@
         {
             "name": "Ross Keatinge",
             "email": "tetranz@gmail.com"
+        },
+        {
+            "name": "Philippe Villiers",
+            "email": "kissifrot+gh@gmail.com",
+            "role": "Maintainer"
         }
     ],
     "require": {
-        "php": ">=7.1.3",
+        "php": ">=8.2",
         "doctrine/orm": ">=2.4",
-        "twig/twig": ">=2.9",
-        "symfony/property-access": ">=4.0",
-        "symfony/dependency-injection": ">=4.0",
-        "symfony/http-kernel": ">=4.0",
-        "symfony/form": ">=4.0",
-        "symfony/config": ">=4.0",
-        "symfony/routing": ">=4.0"
+        "twig/twig": "^3.0.4",
+        "symfony/property-access": ">=7.0",
+        "symfony/dependency-injection": ">=7.0",
+        "symfony/http-kernel": ">=7.0",
+        "symfony/form": ">=7.0",
+        "symfony/config": ">=7.0",
+        "symfony/routing": ">=7.0"
     },
     "autoload": {
         "psr-4": { "Tetranz\\Select2EntityBundle\\": "" }
@@ -27,5 +32,8 @@
     "extra": {
         "branch-alias": {
         }
+    },
+    "require-dev": {
+        "phpstan/phpstan": "^1.11"
     }
 }
